--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-sacale=1.0">
+    <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div>
+      <h1>Hello Webpack</h1>
+    </div>
+    <script src="./bundle.js"></script>
   </body>
 </html>
