--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div>
-      <h1>Hello Webpack</h1>
-    </div>
+    <div id="root"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
